# agentic-integration-factory

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  create_micro_integrations.md  package-lock.json  package.json
apps/api/: .coverage  Dockerfile  README.md  alembic.ini  coverage.xml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_add_source_type.py
apps/api/resources/mdk-reference/micro-integration/: .gitignore
apps/api/resources/samples/json_schema/: order.schema.json
apps/api/resources/samples/openapi/: stripe-webhook-demo.yaml
apps/api/resources/templates/helm/chart/: Chart.yaml.j2  values.yaml.j2
apps/api/resources/templates/integration-java-mdk/base/: CanonicalEventService.java.j2  EventSubscriberService.java.j2  MicroIntegrationApplication.java.j2  PollingConsumerService.java.j2  README.md.j2  SolacePublisherService.java.j2  SourceProducerBindingCapabilitiesFactory.java.j2  demo-curls.sh.j2
apps/api/src/spec2event/: config.py  control_plane.py  db.py  main.py  models.py  schemas.py  security.py  worker.py
apps/api/src/spec2event/adapters/ai/: base.py  litellm.py
apps/api/src/spec2event/api/: routes.py
apps/api/src/spec2event/services/: aws_service.py  command_runner.py  generator_service.py  openapi_service.py  pipeline.py  queue_service.py  run_service.py  settings_service.py
apps/api/src/spec2event_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/tests/: test_api_happy_path.py  test_control_plane.py  test_json_schema_adapter.py  test_openapi_service.py  test_pipeline.py  test_portal_and_generator.py  test_source_registry.py
(+313 files in other folders)
